--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,7 +41,7 @@ jobs:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: | 
-            type=raw,value=latest,enable={{is_default_branch}}
+            taurascern/mc-server:latest
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
